--- a/Nihongo/src/main/webapp/WEB-INF/jsp/nihongo/test/go.xhtml
+++ b/Nihongo/src/main/webapp/WEB-INF/jsp/nihongo/test/go.xhtml
@@ -3,9 +3,13 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:tr="http://nya.desu/translator"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <h:outputLabel value="Hello, world"/>
+<p:panelGrid binding="${value.panel}"/>
+    <tr:formButtons buttons="#{updateForm.specialButtons}" footer="true"/>
 </f:view>
 </html>
